k8s/web-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  labels:
    app.kubernetes.io/name: web-ui
spec:
  selector:
    app.kubernetes.io/name: web-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
